adjust height and width of figure to ensure image is visible. adjust background-image properties to ensure no repeat, and image is contained within the container <figure>

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,9 +42,12 @@ header .inner {
     color: var(--light-clr);
 }
 
-.logo {
-    background-image: url("../assets/images/logo.jpg");
+figure.logo {
+    background-image: url(../assets/images/logo.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 120px;
+    height: 60px;
 }
 
 nav {
